# first_HS_v2v

./: CMakeLists.txt  README.md  config.json
resources/: 1280X720X15XI420.yuv
src/: app_data_manager.cc  app_data_manager.h  main.cc  rtc_engine_wrapper.cc  rtc_engine_wrapper.h
src/util/: argparser.cc  argparser.h  thread_loop.h  util.cc  util.h
tools/iot_car/: OneKeyConfig.py
